@@ -1,6 +1,6 @@
 /************************************************************************
  *
- * Copyright (C) 2006-2008 Graeme Gott <graeme@gottcode.org>
+ * Copyright (C) 2006, 2007, 2008, 2010 Graeme Gott <graeme@gottcode.org>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -21,7 +21,9 @@
 
 #include "data.h"
 
-#include <QGridLayout>
+#include <QDateEdit>
+#include <QDialogButtonBox>
+#include <QFormLayout>
 #include <QIntValidator>
 #include <QLabel>
 #include <QLineEdit>
@@ -39,39 +41,31 @@ GoalsWindow::GoalsWindow(QWidget* parent, Database* data)
 	m_total = new QLineEdit(this);
 	m_total->setMinimumWidth(140);
 	m_total->setValidator(validator);
-	QLabel* total_label = new QLabel(tr("Total:"), this);
-	total_label->setAlignment(Qt::AlignVCenter | Qt::AlignRight);
 	connect(m_total, SIGNAL(textEdited(const QString&)), this, SLOT(totalEdited(const QString&)));
 
 	m_daily = new QLineEdit(this);
 	m_daily->setMinimumWidth(140);
 	m_daily->setValidator(validator);
-	QLabel* daily_label = new QLabel(tr("Daily:"), this);
-	daily_label->setAlignment(Qt::AlignVCenter | Qt::AlignRight);
 	connect(m_daily, SIGNAL(textEdited(const QString&)), this, SLOT(dailyEdited(const QString&)));
 
-	m_months = new QLineEdit(this);
-	m_months->setMinimumWidth(140);
-	m_months->setValidator(validator);
-	QLabel* months_label = new QLabel(tr("Months:"), this);
-	months_label->setAlignment(Qt::AlignVCenter | Qt::AlignRight);
-	connect(m_months, SIGNAL(textEdited(const QString&)), this, SLOT(monthsEdited(const QString&)));
+	m_start = new QDateEdit(this);
+	m_start->setCalendarPopup(true);
+	connect(m_start, SIGNAL(dateChanged(const QDate&)), this, SLOT(startEdited(const QDate&)));
 
-	QPushButton* close = new QPushButton(tr("Close"), this);
-	connect(close, SIGNAL(clicked()), this, SLOT(hide()));
+	m_end = new QDateEdit(this);
+	m_end->setCalendarPopup(true);
+	connect(m_end, SIGNAL(dateChanged(const QDate&)), this, SLOT(endEdited(const QDate&)));
 
-	QGridLayout* grid = new QGridLayout(this);
-	grid->setSizeConstraint(QLayout::SetFixedSize);
-	grid->setSpacing(0);
-	grid->setColumnMinimumWidth(1, 6);
-	grid->setRowMinimumHeight(3, 12);
-	grid->addWidget(total_label, 0, 0);
-	grid->addWidget(daily_label, 1, 0);
-	grid->addWidget(months_label, 2, 0);
-	grid->addWidget(m_total, 0, 2, 1, 2);
-	grid->addWidget(m_daily, 1, 2, 1, 2);
-	grid->addWidget(m_months, 2, 2, 1, 2);
-	grid->addWidget(close, 4, 3);
+	QDialogButtonBox* buttons = new QDialogButtonBox(QDialogButtonBox::Close, Qt::Horizontal, this);
+	connect(buttons, SIGNAL(rejected()), this, SLOT(hide()));
+
+	QFormLayout* layout = new QFormLayout(this);
+	layout->setSizeConstraint(QLayout::SetFixedSize);
+	layout->addRow(tr("Total:"), m_total);
+	layout->addRow(tr("Daily:"), m_daily);
+	layout->addRow(tr("Start:"), m_start);
+	layout->addRow(tr("End:"), m_end);
+	layout->addRow(buttons);
 }
 
 // ============================================================================
@@ -79,7 +73,8 @@ GoalsWindow::GoalsWindow(QWidget* parent, Database* data)
 void GoalsWindow::resetValues() {
 	m_total->setText(QString::number(m_data->finalGoal()));
 	m_daily->setText(QString::number(m_data->dailyGoal()));
-	m_months->setText(QString::number(m_data->timeFrame()));
+	m_start->setDate(m_data->startDate());
+	m_end->setDate(m_data->endDate());
 }
 
 // ============================================================================
@@ -105,8 +100,15 @@ void GoalsWindow::dailyEdited(const QString& value) {
 
 // ============================================================================
 
-void GoalsWindow::monthsEdited(const QString& value) {
-	m_data->setTimeFrame(value.toInt());
+void GoalsWindow::startEdited(const QDate& start) {
+	m_data->setStart(start);
+	emit modified();
+}
+
+// ============================================================================
+
+void GoalsWindow::endEdited(const QDate& end) {
+	m_data->setEnd(end);
 	emit modified();
 }
 
